--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "next": "15.0.2",
     "next-contentlayer2": "0.5.3",
     "next-themes": "^0.3.0",
+    "patch-package": "^8.0.0",
     "pliny": "0.4.0",
     "postcss": "^8.4.24",
+    "postinstall-postinstall": "^2.1.0",
     "react": "rc",
     "react-dom": "rc",
     "reading-time": "1.5.0",
